terraform/main.tf
# Resource Group
resource "azurerm_resource_group" "rg" {
  name     = "rg-${var.prefix}-prod"
  location = var.location
}

# Virtual Network: 172.16.0.0/16
resource "azurerm_virtual_network" "vnet" {
  name                = "vnet-${var.prefix}-prod"
  address_space       = ["172.16.0.0/16"]
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name
}

# Subnet cho AKS: 172.16.1.0/24
resource "azurerm_subnet" "aks_subnet" {
  name                 = "snet-aks-prod"
  resource_group_name  = azurerm_resource_group.rg.name
  virtual_network_name = azurerm_virtual_network.vnet.name
  address_prefixes     = ["172.16.1.0/24"] #
}

# ---------------------------------------------------
#  SUBNET MỚI CHO POSTGRES (ĐỂ TÍCH HỢP VNET)
# ---------------------------------------------------
resource "azurerm_subnet" "postgres_subnet" {
  name                 = "snet-postgres-prod"
  resource_group_name  = azurerm_resource_group.rg.name
  virtual_network_name = azurerm_virtual_network.vnet.name
  address_prefixes     = ["172.16.2.0/24"] # Một dải IP mới, không trùng

  # Yêu cầu đặc biệt: "ủy quyền" subnet này cho dịch vụ Postgres
  delegation {
    name = "fs"
    service_delegation {
      name = "Microsoft.DBforPostgreSQL/flexibleServers"
      actions = [
        "Microsoft.Network/virtualNetworks/subnets/join/action",
      ]
    }
  }
}

resource "azurerm_kubernetes_cluster" "aks" {
  name                = "aks-${var.prefix}-prod"
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name
  dns_prefix          = "${var.prefix}-prod"

  # checkov:skip=CKV2_AZURE_29: "We use Kubenet network plugin for cost optimization (saves IP addresses)"
  default_node_pool {
    name           = "default"
    node_count     = 1
    vm_size        = "Standard_B2s"
    vnet_subnet_id = azurerm_subnet.aks_subnet.id
  }

  identity {
    type = "SystemAssigned"
  }
  oms_agent {
    log_analytics_workspace_id = azurerm_log_analytics_workspace.logs.id
    msi_auth_for_monitoring_enabled = true # Dùng identity để xác thực
  }
}

resource "azurerm_log_analytics_workspace" "logs" {
  name                = "logs-${var.prefix}-prod"
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name
  sku                 = "PerGB2018"
  retention_in_days   = 30 # Lưu log trong 30 ngày
}
